--- a/module-admin/src/main/resources/static/js/nice-select/css/nice-select.css
+++ b/module-admin/src/main/resources/static/js/nice-select/css/nice-select.css
@@ -45,8 +45,8 @@
 }
 
 .nice-select.disabled {
-    border-color: #ededed;
-    color: #999;
+    background-color: #e9ecef;
+    opacity: 1;
     pointer-events: none;
 }
 
