design: 검색영역 border-top 제거

--- a/module-admin/src/main/resources/templates/example.html
+++ b/module-admin/src/main/resources/templates/example.html
@@ -468,7 +468,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="mt-1 p-t-20 text-center border-top">
+                            <div class="mt-1 p-t-20 text-center ">
                                 <button class="btn btn-disabled m-r-5" data-bs-dismiss="modal">초기화</button>
                                 <button class="btn btn-primary">검색</button>
                             </div>
