--- a/module-admin/src/main/resources/templates/faq/view.html
+++ b/module-admin/src/main/resources/templates/faq/view.html
@@ -54,7 +54,7 @@
                             </div>
                             <!-- //키워드 filter -->
                             <!-- 키워드 filter-btn -->
-                            <div class="mt-1 p-t-20 text-center border-top">
+                            <div class="mt-1 p-t-20 text-center">
                                 <button type="reset" class="btn btn-gray m-r-5" id="initBtn">초기화</button>
                                 <button type="button" class="btn btn-primary" id="searchBtn">검색</button>
                             </div>
