--- a/module-admin/src/main/resources/templates/managerBoard/view.html
+++ b/module-admin/src/main/resources/templates/managerBoard/view.html
@@ -70,7 +70,7 @@
                             </div>
                             <!-- //키워드 filter -->
                             <!-- 키워드 filter-btn -->
-                            <div class="mt-1 p-t-20 text-center border-top">
+                            <div class="mt-1 p-t-20 text-center">
                                 <button class="btn btn-gray m-r-5">초기화</button>
                                 <button class="btn btn-primary" onclick="listController.init();">검색</button>
                             </div>
