--- a/module-admin/src/main/resources/templates/member/view.html
+++ b/module-admin/src/main/resources/templates/member/view.html
@@ -64,7 +64,7 @@
                             <!-- //키워드 filter -->
 
                             <!-- 키워드 filter-btn -->
-                            <div class="mt-1 p-t-20 text-center border-top">
+                            <div class="mt-1 p-t-20 text-center">
                                 <button type="button" class="btn btn-gray m-r-5" id="searchInit">초기화</button>
                                 <button type="button" class="btn btn-primary" id="searchBtn">검색</button>
                             </div>
