--- a/module-admin/src/main/resources/templates/roles/memberMapping.html
+++ b/module-admin/src/main/resources/templates/roles/memberMapping.html
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mt-1 p-t-20 text-center border-top">
+                    <div class="mt-1 p-t-20 text-center">
                         <button type="button" class="btn btn-gray m-r-5">초기화</button>
                         <button type="button" class="btn btn-primary">검색</button>
                     </div>
