design: 등록/수정/상세화면 최하단 버튼 text-center 적용

--- a/module-admin/src/main/resources/templates/faq/form.html
+++ b/module-admin/src/main/resources/templates/faq/form.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <!-- 버튼영역 -->
-        <div class="card-block-small">
+        <div class="card-block-small text-center">
             <button type="button" class="btn btn-gray m-r-5" id="cancelBtn">취소</button>
             <button type="submit" class="btn btn-primary" id="saveBtn">저장</button>
         </div>
