--- a/module-admin/src/main/resources/templates/inquiry/inquiryList.html
+++ b/module-admin/src/main/resources/templates/inquiry/inquiryList.html
@@ -491,7 +491,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card-block-small">
+                    <div class="card-block-small text-center">
                         <button class="btn btn-disabled m-r-5" id="answerCancel">취소</button>
                         <button class="btn btn-primary" id="answerInsert">저장</button>
                     </div>
