--- a/module-admin/src/main/resources/templates/news/newsList.html
+++ b/module-admin/src/main/resources/templates/news/newsList.html
@@ -485,7 +485,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card-block-small">
+                    <div class="card-block-small text-center">
                         <button class="btn btn-disabled m-r-5" id="newsCancel">취소</button>
                         <button class="btn btn-primary" id="newsInsert">저장</button>
                     </div>
