--- a/module-admin/src/main/resources/templates/sendHistory/form.html
+++ b/module-admin/src/main/resources/templates/sendHistory/form.html
@@ -94,7 +94,7 @@
         </div>
     </form>
 
-    <div class="card-block-small">
+    <div class="card-block-small text-center">
         <button type="button" class="btn btn-gray m-r-5" onclick="fn_cancel()">취소</button>
     </div>
 </div>
