--- a/module-admin/src/main/resources/templates/templateManage/form.html
+++ b/module-admin/src/main/resources/templates/templateManage/form.html
@@ -71,7 +71,7 @@
         </div>
     </form>
 
-    <div class="card-block-small">
+    <div class="card-block-small text-center">
         <button type="button" class="btn btn-gray m-r-5" onclick="fn_cancel()">취소</button>
         <button type="button" class="btn btn-primary" onclick="fn_save()">저장</button>
     </div>
