--- a/module-admin/src/main/resources/templates/member/tab/detail.html
+++ b/module-admin/src/main/resources/templates/member/tab/detail.html
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <div class="card-block-small">
+    <div class="card-block-small text-center">
         <button type="button" class="btn btn-gray m-r-5" id="cancelBtn">취소</button>
         <button type="button" class="btn btn-primary" id="saveBtn">저장</button>
     </div>
