--- a/module-admin/src/main/resources/templates/policy/view.html
+++ b/module-admin/src/main/resources/templates/policy/view.html
@@ -80,7 +80,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card-block-small">
+                    <div class="card-block-small text-center">
                         <button class="btn btn-gray m-r-5" onclick="policy.resetData()">취소</button>
                         <button class="btn btn-primary" onclick="policy.chagePolicyData()" >저장</button>
                     </div>
