--- a/module-admin/src/main/resources/static/files/assets/css/style.css
+++ b/module-admin/src/main/resources/static/files/assets/css/style.css
@@ -3867,9 +3867,9 @@ a[data-toggle="lightbox"] .img-fluid {
     left: 50%;
     top: 50%;
     position: absolute;
-    height: 200px;
-    width: 200px;
-    margin: -100px 0 0 -100px; }
+    height: 50px;
+    width: 50px;
+    margin: -25px 0 0 -25px; }
     .theme-loader .ball-scale .contain {
       height: 100%;
       width: 100%; }
@@ -3878,21 +3878,25 @@ a[data-toggle="lightbox"] .img-fluid {
         .theme-loader .ball-scale .contain .ring:first-child {
           display: block;
           height: 100%;
-          width: 100%;}
-          .theme-loader .ball-scale .contain .ring:first-child .frame{
+          width: 100%;
+          border-radius: 50%;
+          padding: 10px;
+          border: 3px solid transparent;
+          border-left-color: #ff8031;
+          border-right-color: #ff8031;
+          animation: round-rotate 1.5s ease-in-out infinite; }
+          .theme-loader .ball-scale .contain .ring:first-child .frame {
             height: 100%;
-            width: 100%;}
-          .theme-loader .ball-scale .contain .ring:first-child .frame .loadingImg {
-            height: auto;
             width: 100%;
-            animation: round-rotate 1.5s ease-in-out infinite;}
+            border-radius: 50%;
+            border: 3px solid transparent;
+            border-left-color: #ff8031;
+            border-right-color: #ff8031;
+            animation: round-rotate 1.5s ease-in-out infinite; }
 
 @keyframes round-rotate {
   100% {
-    transform: rotate(360deg);
-    transform-origin: center;
-  }
-}
+    transform: rotate(360deg); } }
 
 .progress {
   height: 1rem; }
@@ -9723,8 +9727,6 @@ body.menu-bottom #collapse-menu {
   color: #171a19;
   border-radius: 2px;
   border: 1px solid #cccccc; }
-  .form-control:focus {
-    border: 1px solid #ff8031; }
   .form-control.form-control-normal {
     font-weight: 400; }
   .form-control.form-control-bold {
