--- a/module-admin/src/main/resources/static/files/assets/scss/partials/_general.scss
+++ b/module-admin/src/main/resources/static/files/assets/scss/partials/_general.scss
@@ -5305,8 +5305,8 @@ a[data-toggle="lightbox"] .img-fluid {
                         width: 100%;
                         border-radius: 50%;
                         border: 3px solid transparent;
-                        border-left-color: $success-color;
-                        border-right-color: $success-color;
+                        border-left-color: $primary-color;
+                        border-right-color: $primary-color;
                         animation: round-rotate 1.5s ease-in-out infinite;
                     }
                 }
