--- a/module-admin/src/main/resources/templates/member/tab/report.html
+++ b/module-admin/src/main/resources/templates/member/tab/report.html
@@ -27,25 +27,21 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="card">
-                    <div class="card-block-small">
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="mb-0 form-group">
-                                    <div class="row form-group mb-3">
-                                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="category"><strong>신고유형</strong></label>
-                                        <div class="col-sm-12">
-                                            <input type="text" class="form-control form-control-sm form-control-round" id="category" name="category" readonly>
-                                        </div>
-                                    </div>
-                                    <div class="row form-group mb-3 m-t-10" id="reason_con">
-                                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="content">
-                                            <strong>내용</strong>
-                                        </label>
-                                        <div class="col-sm-12">
-                                            <textarea rows="5" cols="5" class="form-control form-control-sm form-control-round" name="content" id="content" readonly></textarea>
-                                        </div>
-                                    </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="mb-0 form-group">
+                            <div class="row form-group mb-3">
+                                <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="category"><strong>신고유형</strong></label>
+                                <div class="col-sm-12">
+                                    <input type="text" class="form-control form-control-sm form-control-round" id="category" name="category" readonly>
+                                </div>
+                            </div>
+                            <div class="row form-group mb-3 m-t-10" id="reason_con">
+                                <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="content">
+                                    <strong>내용</strong>
+                                </label>
+                                <div class="col-sm-12">
+                                    <textarea rows="5" cols="5" class="form-control form-control-sm form-control-round" name="content" id="content" readonly></textarea>
                                 </div>
                             </div>
                         </div>
@@ -109,7 +105,7 @@
                     },
                     {
                         render: function (data, type, row, meta) {
-                            return `<button class="btn btn-sm btn-transparent" onclick="reportController.showContentPopup(${meta.row})"> 확인 </button>`;
+                            return `<button class="btn btn-gray" onclick="reportController.showContentPopup(${meta.row})"> 확인 </button>`;
                         }
                     },
                     {data: 'reportedAt'},
