--- a/module-admin/src/main/resources/static/files/assets/scss/partials/theme-elements/_form-elements.scss
+++ b/module-admin/src/main/resources/static/files/assets/scss/partials/theme-elements/_form-elements.scss
@@ -36,7 +36,7 @@
     border: 1px solid rgb(204, 204, 204);
 
     &:focus {
-        border: 1px solid $primary-color;
+        //border: 1px solid $primary-color;
     }
 
     &.form-control-normal {
