--- a/module-admin/src/main/resources/templates/member/view.html
+++ b/module-admin/src/main/resources/templates/member/view.html
@@ -87,30 +87,32 @@
                         </div>
                     </div>
                     <div class="card-block-small">
-                        <table id="memberListTable" class="display" style="width:100%">
-                            <thead>
-                            <tr>
-                                <th>
-                                    <div class="border-checkbox-section">
-                                        <div class="border-checkbox-group">
-                                            <input type="checkbox" class="border-checkbox " id="allCheckBox" name="allCheckbox" value="All">
-                                            <label class="form-label border-checkbox-label" for="allCheckBox"></label>
+                        <div class="dt-responsive table-responsive">
+                            <table id="memberListTable" class="display" style="width:100%">
+                                <thead>
+                                <tr>
+                                    <th>
+                                        <div class="border-checkbox-section">
+                                            <div class="border-checkbox-group">
+                                                <input type="checkbox" class="border-checkbox " id="allCheckBox" name="allCheckbox" value="All">
+                                                <label class="form-label border-checkbox-label" for="allCheckBox"></label>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <!--<input type="checkbox" id="allCheckBox" name="allCheckBox">-->
-                                </th>
-                                <th>아이디</th>
-                                <th>닉네임</th>
-                                <th>가입수단</th>
-                                <th>회원상태</th>
-                                <th>입양기록</th>
-                                <th>분양기록</th>
-                                <th>가입일</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
+                                        <!--<input type="checkbox" id="allCheckBox" name="allCheckBox">-->
+                                    </th>
+                                    <th>아이디</th>
+                                    <th>닉네임</th>
+                                    <th>가입수단</th>
+                                    <th>회원상태</th>
+                                    <th>입양기록</th>
+                                    <th>분양기록</th>
+                                    <th>가입일</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
