--- a/module-admin/src/main/resources/templates/roles/memberListModal.html
+++ b/module-admin/src/main/resources/templates/roles/memberListModal.html
@@ -34,23 +34,25 @@
                 <div class="card-block-small">
                     <div class="row">
                         <div class="col-12">
-                            <table id="memberListTable" class="display" style="width:100%;">
-                                <thead>
-                                <tr>
-                                    <th>
-                                        <div class="border-checkbox-section">
-                                            <div class="border-checkbox-group">
-                                                <input type="checkbox" class="border-checkbox " id="allCheckBox" name="allCheckbox" value="All">
-                                                <label class="form-label border-checkbox-label" for="allCheckBox"></label>
+                            <div class="dt-responsive table-responsive">
+                                <table id="memberListTable" class="display" style="width:100%;">
+                                    <thead>
+                                    <tr>
+                                        <th>
+                                            <div class="border-checkbox-section">
+                                                <div class="border-checkbox-group">
+                                                    <input type="checkbox" class="border-checkbox " id="allCheckBox" name="allCheckbox" value="All">
+                                                    <label class="form-label border-checkbox-label" for="allCheckBox"></label>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </th>
-                                    <th>회원 일련번호</th>
-                                    <th>이메일</th>
-                                    <th>닉네임</th>
-                                </tr>
-                                </thead>
-                            </table>
+                                        </th>
+                                        <th>회원 일련번호</th>
+                                        <th>이메일</th>
+                                        <th>닉네임</th>
+                                    </tr>
+                                    </thead>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
