design: modal x 버튼 파일명 변경

--- a/module-admin/src/main/resources/static/css/admin.common.css
+++ b/module-admin/src/main/resources/static/css/admin.common.css
@@ -753,7 +753,7 @@ table.dataTable tbody tr.selected > * {
 }
 
 .btn-close {
-    background: url('/css/images/x_button.png') center/2em auto no-repeat;
+    background: url('/css/images/x-button.png') center/2em auto no-repeat;
     opacity: 1
 }
 
