--- a/module-admin/src/main/resources/static/files/extra-pages/404/1/css/style.css
+++ b/module-admin/src/main/resources/static/files/extra-pages/404/1/css/style.css
@@ -5,6 +5,8 @@
 @import url(vegas.min.css);
 /* Google Fonts */
 @import url("https://fonts.googleapis.com/css?family=Montserrat|Open+Sans");
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
 /*
 * http://meyerweb.com/eric/tools/css/reset/ 
 * v2.0 | 20110126
@@ -68,8 +70,8 @@ html {
 }
 
 body {
-  background: #1F222E;
-  font-family: "Open Sans", "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  background: #F9F7F2;
+  font-family: Pretendard, "Open Sans", "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   color: #000000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -137,11 +139,18 @@ button {
   -moz-transition: all, 0.2s, ease-in-out;
   transition: all, 0.2s, ease-in-out;
   cursor: pointer;
+  background-color:#ff8031;
+  color: white;
+  border: 1px solid transparent;
+  border-radius:25px;
+  padding:5px 11px;
 }
+
 button:hover, button:active, button:focus {
   outline: none !important;
   text-decoration: none !important;
-  color: #2B2D35;
+  background-color: #ff6200;
+  border-color: #ff6200;
 }
 
 strong, b {
@@ -153,22 +162,23 @@ em, i {
 }
 
 p {
-  font-family: "Open Sans", "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-family: Pretendard, "Open Sans", "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   margin: 0;
-  font-size: 1.5rem;
+  font-size: 16px;
   line-height: 1.8;
-  color: #d2d6e4;
-  font-weight: 400;
+  color: #171A19;
+  font-weight: 600;
   text-align: center;
 }
 p.subtitle {
-  margin-bottom: 3rem;
+  margin-bottom: rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #FFFFFF;
-  font-family: Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
-  font-weight: 400;
+  color: #171A19;
+  font-family: Pretendard, Montserrat, "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-weight: 600;
+  font-size: 24px;
   text-transform: uppercase;
   line-height: 1;
   margin: 0 0 1.5rem 0;
@@ -183,7 +193,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 24px;
 }
 
 h2 {
@@ -304,7 +314,7 @@ sup {
   position: relative;
   width: 22rem;
   min-height: 22rem;
-  margin: 0 auto 3rem;
+  margin: 0 auto 5rem;
 }
 .content .content-box .big-content .list-square {
   float: left;
